Fixed alignment on team members

--- a/docs/css/pnp-landing-page.css
+++ b/docs/css/pnp-landing-page.css
@@ -4879,6 +4879,8 @@ a {
   -webkit-flex: 0 0 auto;
   -ms-flex: 0 0 auto;
   flex: 0 0 auto;
+  margin-left: auto;
+  margin-right: auto;
 }
 
 .text-small {
@@ -4887,8 +4889,9 @@ a {
   line-height: 20px;
 }
 
-.text-space-left {
-  margin-left: 8px;
+.card-text {
+  width: 100%;
+  text-align: center;
 }
 
 .card-head {
@@ -4900,7 +4903,6 @@ a {
   padding: 10px;
   border-bottom-style: none;
   box-shadow: 0 0 6px 2px rgba(0, 0, 0, 0.02);
-  min-height: 106px; /* Added by Hugo */
 }
 
 .people-card {
